--- a/.github/workflows/pull.yml
+++ b/.github/workflows/pull.yml
@@ -11,6 +11,8 @@ jobs:
         steps:
             - name: Checkout
               uses: actions/checkout@v4
+              with:
+                  token: ${{ secrets.GITHUB_TOKEN }}
             - name: Setup Node.js
               uses: actions/setup-node@v4
               with:
@@ -20,11 +22,20 @@ jobs:
             - name: Check Changed
               id: check_diff
               run: |
-                  if git diff --quiet src/data.ts; then
+                  if git diff --quiet HEAD src/data.ts; then
                     echo "changed=false" >> $GITHUB_OUTPUT
                   else
                     echo "changed=true" >> $GITHUB_OUTPUT
                   fi
+            - name: Commit and Push
+              if: steps.check_diff.outputs.changed == 'true'
+              run: |
+                  git config --global user.name "github-actions[bot]"
+                  git config --global user.email "github-actions[bot]@users.noreply.github.com"
+                  git add src/data.ts
+                  git commit -m ":bento: 自动更新数据"
+                  npm version patch -m ":bookmark: v%s" -s
+                  git push https://x-access-token:${{ secrets.GITHUB_TOKEN }}@github.com/${{ github.repository }}.git
     publish:
         needs: pull
         if: needs.pull.outputs.data_changed == 'true'
@@ -32,6 +43,8 @@ jobs:
         steps:
             - name: Checkout
               uses: actions/checkout@v4
+              with:
+                  token: ${{ secrets.GITHUB_TOKEN }}
             - name: Setup Node.js
               uses: actions/setup-node@v4
               with:
@@ -51,16 +64,6 @@ jobs:
               run: pnpm install
             - name: Build
               run: npm run build
-            - name: Commit and Push Updated
-              run: |
-                  git config --global user.name "github-actions[bot]"
-                  git config --global user.email "github-actions[bot]@users.noreply.github.com"
-                  git add src/data.ts
-                  git commit -m ":bento: 自动更新数据"
-                  npm version patch -m ":bookmark: v%s" -s
-                  git push
-              env:
-                  GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
             - name: Publish
               run: |
                   npm publ --registry=https://npm.pkg.github.com
