--- a/.github/workflows/pull.yml
+++ b/.github/workflows/pull.yml
@@ -1,4 +1,6 @@
 name: Pull Data and Publish
+permissions:
+    contents: write
 on:
     workflow_dispatch:
     schedule:
@@ -13,6 +15,8 @@ jobs:
               uses: actions/checkout@v4
               with:
                   token: ${{ secrets.GITHUB_TOKEN }}
+                  persist-credentials: true
+                  fetch-depth: 0
             - name: Setup Node.js
               uses: actions/setup-node@v4
               with:
@@ -30,12 +34,12 @@ jobs:
             - name: Commit and Push
               if: steps.check_diff.outputs.changed == 'true'
               run: |
-                  git config --global user.name "github-actions[bot]"
-                  git config --global user.email "github-actions[bot]@users.noreply.github.com"
+                  git config user.name "github-actions[bot]"
+                  git config user.email "github-actions[bot]@users.noreply.github.com"
                   git add src/data.ts
                   git commit -m ":bento: 自动更新数据"
                   npm version patch -m ":bookmark: v%s" -s
-                  git push https://x-access-token:${{ secrets.GITHUB_TOKEN }}@github.com/${{ github.repository }}.git
+                  git push --follow-tags origin HEAD:refs/heads/${{ github.ref_name }}
     publish:
         needs: pull
         if: needs.pull.outputs.data_changed == 'true'
